--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,8 @@ matrix:
     - os: osx
       osx_image: xcode9.4  # OS X 10.13
 script:
-  - ./test/run.sh
+  - curl --version
+  - curl --tlsv1.2 -sf "https://api.github.com/repos/gruntwork-io/terragrunt/git/refs/tags"
+  - curl --tlsv1.2 -sf "https://api.github.com/repos/gruntwork-io/terragrunt/git/refs/tags" | grep -o -E "[0-9]+\.[0-9]+\.[0-9]+(-(rc|beta|alpha)[0-9]+)?"
+  - curl --tlsv1.2 -sf "https://api.github.com/repos/gruntwork-io/terragrunt/git/refs/tags" | grep -o -E "[0-9]+\.[0-9]+\.[0-9]+(-(rc|beta|alpha)[0-9]+)?" | uniq | sort -t . -k 1nr,1 -k 2nr,2 -k 3nr,3
+  
