--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
 language: generic
 matrix:
   include:
-    #- os: linux
-    #  dist: trusty
+    - os: linux
+      dist: trusty
     - os: osx
       osx_image: xcode11.4 # OS X 10.14.6
-    #- os: osx
-    #  osx_image: xcode10.2 # OS X 10.14
-    #- os: osx
-    #  osx_image: xcode9.4  # OS X 10.13
+    - os: osx
+      osx_image: xcode10.2 # OS X 10.14
+    - os: osx
+      osx_image: xcode9.4  # OS X 10.13
 script:
-  - curl --version
-  - curl -sf "https://api.github.com/repos/gruntwork-io/terragrunt/git/refs/tags"
-  - curl -sf "https://api.github.com/repos/gruntwork-io/terragrunt/git/refs/tags" | grep -o -E "[0-9]+\.[0-9]+\.[0-9]+(-(rc|beta|alpha)[0-9]+)?"
-  - curl -sf "https://api.github.com/repos/gruntwork-io/terragrunt/git/refs/tags" | grep -o -E "[0-9]+\.[0-9]+\.[0-9]+(-(rc|beta|alpha)[0-9]+)?" | uniq | sort -t . -k 1nr,1 -k 2nr,2 -k 3nr,3
-# - ./test/run.sh
+  - ./test/run.sh
